<resources>

    <string name="app_name">TSDMH_prac5_alex1217</string>

    <string name="p1t1">Uso de elementos parciales</string>

    <string name="p1nombre">Nombre</string>
    <string name="p1edad">Edad</string>
    <string name="p1correo">Correo</string>

    <string name="p1h1">Aquí su nombre</string>
    <string name="p1h2">Aquí su edad</string>
    <string name="p1h3">Aquí su correo</string>

    <string name="p1btn1">Enviar Datos</string>

    <string name="p2bt1">Recepción de datos</string>
    <string name="p2bt2">Datos recibidos</string>

</resources>